2004-04-05  Hans-Bernhard Broeker  <broeker@physik.rwth-aachen.de>

	* BUGS: Removed lots of long-since fixed bugs.  Updated
	descriptions of some others.  Got rid of numbering --- it was
	completely mixed-up anyway.

	* term/win.trm: Added a note regarding the limitation of no wide,
	patterned lines in Windows terminal.

2004-04-05  Petr Mikulik  <mikulik@physics.muni.cz>

	* BUGS: Removed point "8. contour line clipping of 3D data plots":
	it should go to FAQ or to gnuplot's web page => "Useful
	scripts". Removed point "11. bug in OS/2 emx/gcc 2.7.x optimizer"
	(cite this in makefile.os2). Added link to gnuplot's sourceforge
	bug tracker.

	* config/README: Small update.

	* config/makefile.os2: Mention compiler optimization problem from
	BUGS.

2004-04-04  Ethan Merritt  <merritt@u.washington.edu>

	* term/svg.trm: 'Set term svg {fontfile <filename>}' option to embed a
	font, or a hyperlink to it, in the output svg document. This allows the
	use of symbol fonts in conjunction with enhanced text mode. The file
	search path is controlled by environmental variable GNUPLOT_FONTPATH. 

2004-04-01  Petr Mikulik  <mikulik@physics.muni.cz>

	* src/plot.c: Fix OS/2 release version string if wrong in using
	utsname.h.

	* src/mouse.c: On OS/2, don't start with mouse on by default. For some
	unknown reason, it clashes with arrow keys and even palette color
	allocation in multiplot mode... I guess these strange features are in
	gnuplot for ages, as it was always recommended to put "unset mouse"
	into gnuplot.ini.

	* FAQ: Updated to current version.
	Technote: not used "lynx -dump" from its Makefile (spurious references
	left) but from menu "Save formatted document" in links in xterm with
	80 columns.

2004-03-31  Hans-Bernhard Broeker  <broeker@physik.rwth-aachen.de>

	* src/graph3d.c (do_3dplot): Ignore "set grid {back|front}" in
	hidden3d mode --- they would directly contradict the idea of
	hidden-line removal.
