@@ -1,5 +1,5 @@
 #ifndef lint
-static char *RCSid() { return RCSid("$Id: set.c,v 1.127 2004/03/11 18:28:43 broeker Exp $"); }
+static char *RCSid() { return RCSid("$Id: set.c,v 1.128 2004/04/07 11:14:50 broeker Exp $"); }
 #endif
 
 /* GNUPLOT - set.c */
@@ -4078,14 +4078,20 @@ double *a, *b, *c, *d;
  * format string, not all of them. */
 static int
 looks_like_numeric(format)
-char *format;
+    char *format;
 {
     if (!(format = strchr(format, '%')))
 	return 0;
 
-    while (++format && (isdigit((unsigned char)*format)
-			|| *format == '.'))
-	/* do nothing */;
+    while (++format && (*format == ' '
+			|| *format == '-'
+			|| *format == '+'
+			|| *format == '#'))
+	;			/* do nothing */
+
+    while (isdigit((unsigned char) *format)
+	   || *format == '.')
+	++format;
 
     return (*format == 'f' || *format == 'g' || *format == 'e');
 }
